chore(deps): install pinia/testing

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.34.0",
+    "@pinia/testing": "^0.0.14",
     "@types/jsdom": "^20.0.1",
     "@types/node": "^18.11.12",
     "@vitejs/plugin-vue": "^4.0.0",
