--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@vueuse/components": "^9.9.0",
     "@vueuse/core": "^9.9.0",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
