--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@vueuse/core": "^9.9.0",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.34.0",
